--- a/.github/workflows/different-login.yaml
+++ b/.github/workflows/different-login.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Login to Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ inputs.registry_host }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.passw }}
           
